little fix on css for better viewing on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body{
 
 
 div{
-	width: 600px
+	width: 80%;
 
 }
 
