--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ body{
 
 
 div{
-	width: 600px
+	width: 80%;
 
 }
 
